--- a/bday.ipynb
+++ b/bday.ipynb
@@ -30,6 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This function takes in the person's name and date of birth\n",
+    "# then, the function checks if the birthday is within 2 months\n",
+    "# and creates a helpful message\n",
     "def upcoming(name, bdate):\n",
     "    today = dt.datetime.combine(dt.date.today(), dt.datetime.min.time())\n",
     "\n",
@@ -47,6 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This function creates a notification bubble\n",
+    "# with the reminder message\n",
+    "\n",
     "def notifier (bday_dict):\n",
     "    for i in bday_dict:\n",
     "        for j in bday_dict[i]:\n",
@@ -96,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adds the user info into a dictionary\n",
     "bday_form = dt.datetime.strptime(bday, \"%m/%d/%y\")\n",
     "if group not in bday_dict:\n",
     "    bday_dict[group] = [(name, bday_form)]\n",
@@ -127,6 +134,7 @@
     }
    ],
    "source": [
+    "# Runs the functions\n",
     "notifier(bday_dict)"
    ]
   }
